Commit for kubernetes combined to get rid of default values